[tool.poetry]
name = "cellartracker-cli"
version = "0.1.0"
description = "CLI tool for interacting with CellarTracker"
authors = ["Jordan Yeomans"]
packages = [{include = "cellartracker"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.5"
beautifulsoup4 = "^4.14.3"
click = "^8.3.1"
python-dotenv = "^1.2.1"

[tool.poetry.scripts]
ct = "cellartracker.cli:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
